[gd_scene load_steps=8 format=3 uid="uid://b51h17oetcm33"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_bio02"]
[ext_resource type="Texture2D" uid="uid://bhwvv4kfrjw2e" path="res://assets/Filler graphics/CyanKnight.png" id="2_kwiug"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w41ap"]
atlas = ExtResource("2_kwiug")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi12x"]
atlas = ExtResource("2_kwiug")
region = Rect2(96, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_etd3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w41ap")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi12x")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu7qp"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0l8p8"]
size = Vector2(63, 16)

[node name="Enemy" type="Area2D"]
script = ExtResource("1_bio02")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_etd3x")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wu7qp")

[node name="Sword" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(64.5, 0)
shape = SubResource("RectangleShape2D_0l8p8")

[node name="hit_cooldown" type="Timer" parent="."]

[connection signal="area_entered" from="Sword" to="." method="_on_sword_area_entered"]
[connection signal="timeout" from="hit_cooldown" to="." method="_on_hit_cooldown_timeout"]
